--- a/main/plugins/org.talend.hadoop.distribution.dbr540/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.dbr540/plugin.xml
@@ -79,6 +79,12 @@
         </libraryNeeded>
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
+            id="slf4j-log4j12-1.7.16.jar"
+            name="slf4j-log4j12-1.7.16.jar"
+            mvn_uri="mvn:org.slf4j/slf4j-log4j12/1.7.16">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.dbr540"
             id="spark-catalyst_2.11-2.4.3.jar"
             name="spark-catalyst_2.11-2.4.3.jar"
             mvn_uri="mvn:org.apache.spark/spark-catalyst_2.11/2.4.3">
@@ -131,7 +137,12 @@
             name="spark-streaming_2.11-2.4.3.jar"
             mvn_uri="mvn:org.apache.spark/spark-streaming_2.11/2.4.3">
         </libraryNeeded>
-        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.dbr540"
+            id="spark-unsafe_2.11-2.4.3.jar"
+            name="spark-unsafe_2.11-2.4.3.jar"
+            mvn_uri="mvn:org.apache.spark/spark-unsafe_2.11/2.4.3">
+        </libraryNeeded>
         <libraryNeeded
             context="Third party library to connect to Windows Azure"
             id="azure-storage-5.2.0.jar"
@@ -254,6 +265,7 @@
              <library id="scala-library-2.11.12.jar"/>
              <library id="scala-reflect-2.11.12.jar"/>
              <library id="slf4j-api-1.7.16.jar"/>
+             <library id="slf4j-log4j12-1.7.16.jar"/>
              <library id="spark-catalyst_2.11-2.4.3.jar"/>
              <library id="spark-core_2.11-2.4.3.jar"/>
              <library id="spark-graphx_2.11-2.4.3.jar"/>
@@ -262,6 +274,7 @@
              <library id="spark-sql_2.11-2.4.3.jar"/>
              <library id="spark-streaming_2.11-2.4.3.jar"/>
              <library id="spark-network-common_2.11-2.4.3.jar"/>
+             <library id="spark-unsafe_2.11-2.4.3.jar"/>
              <library id="wsdl4j-1.6.3.jar"/>
              <library id="jackson-core-2.6.7.jar"/>
              <library id="javax.ws.rs-api-2.0-m10.jar"/>
