fix(TDI-31817): make database schema works for hana

--- a/main/plugins/org.talend.designer.components.bigdata/components/tSAPHanaRow/tSAPHanaRow_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSAPHanaRow/tSAPHanaRow_messages.properties
@@ -14,7 +14,7 @@ PORT.NAME=Port
 QUERY.NAME=Query
 REJECT.LINK=Rejects
 REJECT.MENU=Rejects
-SCHEMA_DB.NAME=Schema
+TABLESCHEMA.NAME=Schema
 TYPE.ITEM.MSSQL_ODBC=
 TYPE.ITEM.MYSQL=
 TYPE.ITEM.ODBC=
