--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,7 @@
         <module>test/plugins/org.talend.hadoop.distribution.custom.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.databricks.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.dataproc11.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.dbr540.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr103.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr240.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr240hive0131.test</module>
