--- a/pom.xml
+++ b/pom.xml
@@ -151,8 +151,8 @@
         <module>test/plugins/org.talend.hadoop.distribution.cdh5100.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.cdh5120.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.custom.test</module>
-        <module>test/plugins/org.talend.hadoop.distribution.databricks.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.dataproc11.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.dbr350.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.dbr540.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr103.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr240.test</module>
