--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
         <module>main/plugins/org.talend.hadoop.distribution.custom</module>
         <module>main/plugins/org.talend.hadoop.distribution.databricks</module>
         <module>main/plugins/org.talend.hadoop.distribution.dataproc11</module>
+        <module>main/plugins/org.talend.hadoop.distribution.dataproc14</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr103</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr240</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr240hive0131</module>
