--- a/main/plugins/org.talend.hadoop.distribution.dbr540/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.dbr540/plugin.xml
@@ -4,6 +4,19 @@
    <extension
          point="org.talend.core.runtime.librariesNeeded">
 
+
+		<libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.dbr540"
+            id="azure-data-lake-store-sdk-2.3.1.jar"
+            name="azure-data-lake-store-sdk-2.3.1.jar"
+            mvn_uri="mvn:com.microsoft.azure/azure-data-lake-store-sdk/2.3.1">
+        </libraryNeeded>
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.dbr540"
+            id="hadoop-azure-datalake-2.8.1.jar"
+            name="hadoop-azure-datalake-2.8.1.jar"
+            mvn_uri="mvn:org.apache.hadoop/hadoop-azure-datalake/2.8.1">
+        </libraryNeeded>        
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.dbr540"
             id="talend-bigdata-launcher-platform-1.3.2.jar"
@@ -297,8 +310,8 @@
                 name="SPARK-STREAMING-LIB-KINESIS-DBR540">
              <library id="spark-streaming-kinesis-asl_2.11-2.2.0.jar"/>
             <library id="amazon-kinesis-client-1.8.10.jar"/>
-            <library id="aws-java-sdk-kinesis-1.11.126.jar"/>
-            <library id="aws-java-sdk-core-1.11.126.jar"/>
+            <library id="aws-java-sdk-kinesis-1.11.313.jar"/>
+            <library id="aws-java-sdk-core-1.11.313.jar"/>
         </libraryNeededGroup>
         <!-- HiveOnSpark group -->
         <libraryNeededGroup
