feat(TDI-41841): Add record headers with tKafkaOutput

--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaOutput/tKafkaOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaOutput/tKafkaOutput_messages.properties
@@ -32,6 +32,11 @@ KAFKA_PRODUCER_PROPERTIES.ITEM.PROPERTY=Property
 KAFKA_PRODUCER_PROPERTIES.ITEM.VALUE=Value
 KAFKA_TOPIC.NAME=Topic name
 
+HEADERS.NAME=Set Headers
+KAFKA_HEADERS_PROPERTIES.NAME=Headers
+KAFKA_HEADERS_PROPERTIES.ITEM.KEY=Key
+KAFKA_HEADERS_PROPERTIES.ITEM.VALUE=Value
+
 COMPRESS.NAME=Compress the data
 COMPRESSION.NAME=
 COMPRESSION.ITEM.GZIP=GZIP
