--- a/main/plugins/org.talend.hadoop.distribution.dbr540/pom.xml
+++ b/main/plugins/org.talend.hadoop.distribution.dbr540/pom.xml
@@ -7,6 +7,6 @@
     <version>7.3.1-SNAPSHOT</version>
     <relativePath>../../../</relativePath>
   </parent>
-  <artifactId>org.talend.bigdata.se.test.feature</artifactId>
-  <packaging>eclipse-feature</packaging>
+  <artifactId>org.talend.hadoop.distribution.dbr540</artifactId>
+  <packaging>eclipse-plugin</packaging>
 </project>
