--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,8 @@
         <module>main/plugins/org.talend.hadoop.distribution.cdh5x</module>
         <module>main/plugins/org.talend.hadoop.distribution.altus10</module>
         <module>main/plugins/org.talend.hadoop.distribution.custom</module>
-        <module>main/plugins/org.talend.hadoop.distribution.databricks</module>
+        <module>main/plugins/org.talend.hadoop.distribution.dbr350</module>
+        <module>main/plugins/org.talend.hadoop.distribution.dbr540</module>
         <module>main/plugins/org.talend.hadoop.distribution.dataproc11</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr103</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr240</module>
@@ -150,7 +151,8 @@
         <module>test/plugins/org.talend.hadoop.distribution.cdh5100.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.cdh5120.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.custom.test</module>
-        <module>test/plugins/org.talend.hadoop.distribution.databricks.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.dbr350.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.dbr540.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.dataproc11.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr103.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr240.test</module>
