fix(TBD-9093): fix incorrect field name for Kafka components in di

--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaOutput/tKafkaOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaOutput/tKafkaOutput_messages.properties
@@ -20,7 +20,7 @@ HTTPS_SETTING.NAME=tSetKeystore
 
 USE_KRB.NAME=Use kerberos authentication
 JAAS_CONF.NAME=JAAS configuration path
-KRB_SERVICE_NAME.NAME=Kafka brokers principal name
+KRB_SERVICE_NAME.NAME=Kafka brokers service name
 SET_KINIT_PATH.NAME=Set kinit command path
 KINIT_PATH.NAME=
 SET_KRB5_CONF.NAME=Set kerberos configuration path
