feat(TBD-7936): modify pom to resolve build issue

--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,12 @@
         <module>main/plugins/org.talend.hadoop.distribution.cdh5100</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh5120</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh5x</module>
-        <module>main/plugins/org.talend.hadoop.distribution.altus10</module>
-        <module>main/plugins/org.talend.hadoop.distribution.custom</module>
-	<module>main/plugins/org.talend.hadoop.distribution.dataproc11</module>
+        <module>main/plugins/org.talend.hadoop.distribution.cdh5x</module>
+        <module>main/plugins/org.talend.hadoop.distribution.cdh5x</module>
+              <module>main/plugins/org.talend.hadoop.distribution.dataproc11</module>
         <module>main/plugins/org.talend.hadoop.distribution.databricks</module>
+	<module>main/plugins/org.talend.hadoop.distribution.custom</module>
+	<module>main/plugins/org.talend.hadoop.distribution.altus10</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr450</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr500</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr550</module>
