rebase branch on master

--- a/main/plugins/org.talend.repository.hadoopcluster/build.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/build.properties
@@ -4,4 +4,4 @@ bin.includes = .,\
                plugin.properties,\
                icons/
 source.. = src/
-output.. = bin/
+output..=target/classes
