--- a/test/plugins/org.talend.repository.hadoopcluster.configurator.test/pom.xml
+++ b/test/plugins/org.talend.repository.hadoopcluster.configurator.test/pom.xml
@@ -8,5 +8,14 @@
     <relativePath>../../../</relativePath>
   </parent>
   <artifactId>org.talend.repository.hadoopcluster.configurator.test</artifactId>
-  <packaging>eclipse-plugin</packaging>
+    <packaging>eclipse-test-plugin</packaging>
+    <build>
+        <sourceDirectory>src/main/test</sourceDirectory>
+        <outputDirectory>bin</outputDirectory>
+        <resources>
+            <resource>
+                <directory>resources</directory>
+            </resource>
+        </resources>
+    </build>
 </project>
