--- a/main/plugins/org.talend.hadoop.distribution.dbr350/build.properties
+++ b/main/plugins/org.talend.hadoop.distribution.dbr350/build.properties
@@ -1,6 +1,7 @@
-source.. = src/
-output.. = bin/
+source..=src/main/java/
+output..=target/classes/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               plugin.xml
+               plugin.xml,\
+               target/classes/
