--- a/main/plugins/org.talend.hadoop.distribution.dbr540/pom.xml
+++ b/main/plugins/org.talend.hadoop.distribution.dbr540/pom.xml
@@ -9,4 +9,8 @@
   </parent>
   <artifactId>org.talend.hadoop.distribution.dbr540</artifactId>
   <packaging>eclipse-plugin</packaging>
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
 </project>
