--- a/main/plugins/org.talend.repository.pigudf/build.properties
+++ b/main/plugins/org.talend.repository.pigudf/build.properties
@@ -1,6 +1,6 @@
 source.. = src/main/java/
-output.. = bin/
+output..=target/classes/
 bin.includes = META-INF/,\
-               .,\
+               icons/,\
                plugin.xml,\
                plugin.properties
