--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.talend.studio</groupId>
         <artifactId>parent-pom</artifactId>
-        <version>7.2.1</version>
+        <version>7.3.1-SNAPSHOT</version>
         <relativePath/>
     </parent>
     <artifactId>tbd-studio-se</artifactId>
