--- a/main/plugins/org.talend.libraries.hadoop/.classpath
+++ b/main/plugins/org.talend.libraries.hadoop/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry exported="true" kind="lib" path="lib/log4j-1.2.16.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/zookeeper-3.3.3-cdh3u0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/hadoop-core-1.0.0.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="lib"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
