--- a/main/plugins/org.talend.hadoop.distribution.databricks/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.databricks/plugin.xml
@@ -5,129 +5,129 @@
          point="org.talend.core.runtime.librariesNeeded">
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="talend-bigdata-launcher-platform-1.3.3.jar"
             name="talend-bigdata-launcher-platform-1.3.3.jar"
             mvn_uri="mvn:org.talend.libraries/talend-bigdata-launcher-platform-1.3.3/6.0.0">
         </libraryNeeded>
                            
 		 <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="avro-mapred-1.7.7-hadoop2.jar"
             name="avro-mapred-1.7.7-hadoop2.jar"
             mvn_uri="mvn:org.apache.avro/avro-mapred/1.7.7-hadoop2"/>
               
          <!--  -->
          <libraryNeeded 
-         	context="plugin:org.talend.hadoop.distribution.dbr350" 
+         	context="plugin:org.talend.hadoop.distribution.databricks" 
          	id="commons-codec-1.10.jar" 
          	name="commons-codec-1.10.jar" 
          	mvn_uri="mvn:commons-codec/commons-codec/1.10"/>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="commons-lang-2.6.jar"
             name="commons-lang-2.6.jar"
             mvn_uri="mvn:commons-lang/commons-lang/2.6">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="commons-lang3-3.5.jar"
             name="commons-lang3-3.5.jar"
             mvn_uri="mvn:org.apache.commons/commons-lang3/3.5">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="commons-logging-1.2.jar"
             name="commons-logging-1.2.jar"
             mvn_uri="mvn:commons-logging/commons-logging/1.2">
         </libraryNeeded>
         
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="hadoop-common-2.7.3.jar"
             name="hadoop-common-2.7.3.jar"
             mvn_uri="mvn:org.apache.hadoop/hadoop-common/2.7.3">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="hadoop-mapreduce-client-core-2.7.3.jar"
             name="hadoop-mapreduce-client-core-2.7.3.jar"
             mvn_uri="mvn:org.apache.hadoop/hadoop-mapreduce-client-core/2.7.3">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="kryo-shaded-3.0.3.jar"
             name="kryo-shaded-3.0.3.jar"
             mvn_uri="mvn:com.esotericsoftware/kryo-shaded/3.0.3">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="scala-library-2.11.8.jar"
             name="scala-library-2.11.8.jar"
             mvn_uri="mvn:org.scala-lang/scala-library/2.11.8">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="scala-reflect-2.11.8.jar"
             name="scala-reflect-2.11.8.jar"
             mvn_uri="mvn:org.scala-lang/scala-reflect/2.11.8">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="slf4j-api-1.7.16.jar"
             name="slf4j-api-1.7.16.jar"
             mvn_uri="mvn:org.slf4j/slf4j-api/1.7.16">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-catalyst_2.11-2.2.1.jar"
             name="spark-catalyst_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-catalyst_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-core_2.11-2.2.1.jar"
             name="spark-core_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-core_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-graphx_2.11-2.2.1.jar"
             name="spark-graphx_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-graphx_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-hive_2.11-2.2.1.jar"
             name="spark-hive_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-hive_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-mllib-local_2.11-2.2.1.jar"
             name="spark-mllib-local_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-mllib-local_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-mllib_2.11-2.2.1.jar"
             name="spark-mllib_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-mllib_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-network-common_2.11-2.2.1.jar"
             name="spark-network-common_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-network-common_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-sql_2.11-2.2.1.jar"
             name="spark-sql_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-sql_2.11/2.2.1">
         </libraryNeeded>
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-streaming_2.11-2.2.1.jar"
             name="spark-streaming_2.11-2.2.1.jar"
             mvn_uri="mvn:org.apache.spark/spark-streaming_2.11/2.2.1">
@@ -183,43 +183,43 @@
         </libraryNeeded>
         
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="spark-streaming-kinesis-asl_2.11-2.2.0.jar"
             name="spark-streaming-kinesis-asl_2.11-2.2.0.jar"
             mvn_uri="mvn:org.apache.spark/spark-streaming-kinesis-asl_2.11/2.2.0"/>
 
        <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="amazon-kinesis-client-1.8.1.jar"
             name="amazon-kinesis-client-1.8.1.jar"
             mvn_uri="mvn:com.amazonaws/amazon-kinesis-client/1.8.1"/>
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="aws-java-sdk-core-1.11.160.jar"
             name="aws-java-sdk-core-1.11.160.jar"
             mvn_uri="mvn:com.amazonaws/aws-java-sdk-core/1.11.160"/>
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="aws-java-sdk-kinesis-1.11.160.jar"
             name="aws-java-sdk-kinesis-1.11.160.jar"
             mvn_uri="mvn:org.talend.libraries/aws-java-sdk-kinesis-1.11.160/6.0.0"/>
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="gson-2.3.jar"
             name="gson-2.3.jar"
             mvn_uri="mvn:com.google.code.gson/gson/2.3"/>
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="jackson-databind-2.8.9.jar"
             name="jackson-databind-2.8.9.jar"
             mvn_uri="mvn:com.fasterxml.jackson.core/jackson-databind/2.8.9"/>
 
         <libraryNeeded
-            context="plugin:org.talend.hadoop.distribution.dbr350"
+            context="plugin:org.talend.hadoop.distribution.databricks"
             id="jackson-annotations-2.8.9.jar"
             name="jackson-annotations-2.8.9.jar"
             mvn_uri="mvn:com.fasterxml.jackson.core/jackson-annotations/2.8.9"/>
