--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <module>main/plugins/org.talend.hadoop.distribution.cdh5x</module>
         <module>main/plugins/org.talend.hadoop.distribution.altus10</module>
         <module>main/plugins/org.talend.hadoop.distribution.custom</module>
-        <module>main/plugins/org.talend.hadoop.distribution.dbr350</module>
+        <module>main/plugins/org.talend.hadoop.distribution.databricks</module>
         <module>main/plugins/org.talend.hadoop.distribution.dbr540</module>
         <module>main/plugins/org.talend.hadoop.distribution.dataproc11</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr103</module>
