added missing jar

--- a/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr5150/plugin.xml
@@ -885,9 +885,15 @@
 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
+            id="jackson-dataformat-cbor-2.9.4.jar"
+            name="jackson-dataformat-cbor-2.9.4.jar"
+            mvn_uri="mvn:com.fasterxml.jackson.dataformat/jackson-dataformat-cbor/2.9.4"/>
+            
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr5150"
             id="jackson-core-2.9.4.jar"
             name="jackson-core-2.9.4.jar"
-            mvn_uri="mvn:com.fasterxml.jackson.core/jackson-core/2.9.4"/>
+            mvn_uri="mvn:com.fasterxml.jackson.core/jackson-core/2.9.4"/>    
             
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr5150"
@@ -2293,6 +2299,7 @@
 			<library id="ivy-2.4.0.jar"/>
 			<library id="jackson-annotations-2.9.4.jar"/>
 			<library id="jackson-core-2.9.4.jar"/>
+			<library id="jackson-dataformat-cbor-2.9.4.jar"/>
 			<library id="jackson-core-asl-1.9.14-TALEND.jar"/>
 			<library id="jackson-databind-2.9.4.jar"/>
 			<library id="jackson-dataformat-cbor-2.9.4"/>
