--- a/main/plugins/org.talend.demo.bigdata.ce/build.properties
+++ b/main/plugins/org.talend.demo.bigdata.ce/build.properties
@@ -1,5 +1,5 @@
-output.. = classes/
-bin.includes = META-INF/,\
+output..=target/classes/
+bin.includes=META-INF/,\
                .,\
                plugin.xml,\
                resources/,\
