--- a/main/plugins/org.talend.oozie.scheduler/.classpath
+++ b/main/plugins/org.talend.oozie.scheduler/.classpath
@@ -10,5 +10,5 @@
 	<classpathentry exported="true" kind="lib" path="lib/oozie-client-3.3.0.jar" sourcepath="D:/lib/ozzie/src"/>
 	<classpathentry exported="true" kind="lib" path="lib/xercesImpl-2.10.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/xml-apis-1.4.01.jar"/>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
