--- a/main/plugins/org.talend.repository.hcatalog/.classpath
+++ b/main/plugins/org.talend.repository.hcatalog/.classpath
@@ -5,5 +5,5 @@
 	<classpathentry kind="src" path="src/"/>
 	<classpathentry exported="true" kind="lib" path="lib/hadoop-conf-kerberos.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json_simple-1.1.jar"/>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
