--- a/test/plugins/org.talend.hadoop.distribution.cdh510mr1.test/pom.xml
+++ b/test/plugins/org.talend.hadoop.distribution.cdh510mr1.test/pom.xml
@@ -11,5 +11,6 @@
     <packaging>eclipse-test-plugin</packaging>
     <build>
         <sourceDirectory>src</sourceDirectory>
+      <outputDirectory>bin</outputDirectory>
     </build>
 </project>
