--- a/main/plugins/org.talend.designer.pigmap/build.properties
+++ b/main/plugins/org.talend.designer.pigmap/build.properties
@@ -1,6 +1,6 @@
-source.. = src/main/java/
-output..=target/
-bin.includes = plugin.xml,\
+source..=src/main/java/
+output..=target/classes/
+bin.includes=plugin.xml,\
 			   .,\
                META-INF/,\
                icons/,\
