--- a/main/plugins/org.talend.repository.nosql/pom.xml
+++ b/main/plugins/org.talend.repository.nosql/pom.xml
@@ -9,4 +9,8 @@
   </parent>
   <artifactId>org.talend.repository.nosql</artifactId>
   <packaging>eclipse-plugin</packaging>
+  <build>
+    <sourceDirectory>src</sourceDirectory>
+    <outputDirectory>bin</outputDirectory>
+  </build>
 </project>
