--- a/main/plugins/org.talend.repository.oozie/.classpath
+++ b/main/plugins/org.talend.repository.oozie/.classpath
@@ -5,5 +5,5 @@
 	<classpathentry kind="src" path="src/"/>
 	<classpathentry exported="true" kind="lib" path="lib/json-simple-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/oozie-client-3.0.2.jar"/>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
