--- a/test/plugins/org.talend.designer.pigmap.test/build.properties
+++ b/test/plugins/org.talend.designer.pigmap.test/build.properties
@@ -1,4 +1,4 @@
-source.. = src/
-output..=target/
-bin.includes = META-INF/,\
+source..=src/
+output..=bin/
+bin.includes=META-INF/,\
                .
