--- a/test/plugins/org.talend.repository.hadoopcluster.configurator.test/build.properties
+++ b/test/plugins/org.talend.repository.hadoopcluster.configurator.test/build.properties
@@ -1,5 +1,5 @@
 source..=src/main/java/
-output..=target/
-bin.includes = META-INF/,\
+output..=target/classes/
+bin.includes=META-INF/,\
                .,\
                resources/
